# delugemu

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  DEBUGGING.md  HW.md  Mapping Button and Encoder Coordinates.md  README.md
.beads/: .gitignore  issues.jsonl
.github/workflows/: build.yml
docs/: architecture.md  firmware-perf.md  hardware.md  memory-map.md  register-coverage.md  roadmap.md  windows.md
qemu-patches/: 0001-coreaudio-multichannel-and-sample-rate.patch  0002-cocoa-delugemu-window-title.patch
scripts/: bootstrap.sh  build.sh  common.sh  delugemu.ps1  dz_bucket.py  dz_play.py  dz_topblocks.py  enc_test.py  integrate.sh  midi_bridge.c  midi_route.py  mksd.sh  package.sh  press_key.py  run.sh  skin_calibrate_controls.py  skin_calibrate_oled.py
src/: Kconfig  meson.build
src/hw/arm/: deluge.c  rza1l_soc.c
src/hw/char/: rza1l_scif.c
src/hw/display/: deluge_oled.c  deluge_padgrid.c  deluge_segment.c  deluge_skin.c
src/hw/dma/: rza1l_dmac.c
src/hw/gpio/: rza1l_gpio.c
src/hw/input/: deluge_input.c
src/hw/misc/: deluge_pic.c  rza1l_adc.c  rza1l_bsc.c  rza1l_cpg.c  rza1l_rtc.c  rza1l_wdt.c
src/hw/sd/: rza1l_sdhi.c
src/hw/ssi/: rza1l_rspi.c  rza1l_spibsc.c  rza1l_ssif.c
src/hw/timer/: rza1l_mtu2.c  rza1l_ostm.c
src/hw/usb/: rza1l_usb.c
src/include/hw/arm/: rza1l_soc.h
src/include/hw/char/: rza1l_scif.h
src/include/hw/display/: deluge_oled.h  deluge_padgrid.h  deluge_segment.h  deluge_skin.h  deluge_skin_controls.h  deluge_skin_layout.h
src/include/hw/dma/: rza1l_dmac.h
src/include/hw/gpio/: rza1l_gpio.h
src/include/hw/input/: deluge_input.h
src/include/hw/misc/: deluge_pic.h  rza1l_adc.h  rza1l_bsc.h  rza1l_cpg.h  rza1l_rtc.h  rza1l_wdt.h
src/include/hw/sd/: rza1l_sdhi.h
src/include/hw/ssi/: rza1l_rspi.h  rza1l_spibsc.h  rza1l_ssif.h
src/include/hw/timer/: rza1l_mtu2.h  rza1l_ostm.h
src/include/hw/usb/: rza1l_usb.h
tests/: README.md  boot.sh  midi-coremidi.sh  pad-click.sh  smoke.sh  usb-midi-bridge.sh  usb-midi.sh
